@@ -33,3 +33,4 @@ Import-Package:
  org.restlet.service,
  org.restlet.util
 Bundle-RequiredExecutionEnvironment: J2SE-1.5
+Require-Bundle: org.codehaus.jackson;bundle-version="1.4.0"
