@@ -22,6 +22,8 @@ Changes log
          ChallengeResponse for a distinct resource. Reported by Steve Ferris.
        - Fixed FreeMarker optional OSGi dependency on Servlet.
          Reported by Warren Janssens
+       - Fixed parsing of form with empty parameters. Now their value is ""
+         instead of null. Reported by Arjohn Kampman
     
     - 2.0.9 (2011-08-20)
     - Bugs fixed
